<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paper"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/gutter"
        android:paddingEnd="@dimen/gutter"
        android:paddingTop="22dp"
        android:paddingBottom="28dp">

        <TextView style="@style/Text.Mark" android:text="@string/app_mark" />
        <TextView style="@style/Text.H1" android:text="@string/shortcuts_title" />
        <TextView style="@style/Text.Body" android:text="@string/shortcuts_subtitle" />

        <View style="@style/Rule" />

        <LinearLayout
            android:id="@+id/shortcutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView style="@style/Text.Footer" android:text="@string/shortcuts_footer" />
    </LinearLayout>
</ScrollView>
