<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paper">

    <LinearLayout
        android:id="@+id/splashContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/Text.SplashMark"
            android:text="@string/app_mark" />

        <View style="@style/Rule.Mini" />

        <TextView
            style="@style/Text.SplashCredit"
            android:text="@string/splash_credit" />
    </LinearLayout>

    <TextView
        style="@style/Text.SplashFooter"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/splash_footer" />
</FrameLayout>
